Add realistic jbang-like benchmark with standalone command classes
Adds a jbang-like CLI hierarchy to the benchmark module for profiling
realistic command-line tool startup with the annotation processor:
- 11 subcommands (run, build, edit, init, export, info, alias, cache,
  config, jdk, version)
- 5 mixins (ScriptMixin, BuildMixin, DependencyInfoMixin, NativeMixin,
  RunMixin)
- 3-level inheritance (BaseCommand -> BaseBuildCommand -> RunCommand)
- ~30 options on the run path across mixins and inheritance
- Standalone top-level classes matching real-world usage patterns

Two new benchmarks in StartupBenchmark:
- runJBangLikeBenchmark: command creation (generated 2.6 us vs reflection
  10.0 us = 3.9x faster)
- runJBangLikeParseExecuteBenchmark: full parse+execute across 12
  different command lines exercising all subcommands, negatables,
  fallbackValues, inherited options, and passthrough args (generated
  115 us vs reflection 169 us = 1.5x faster)

Also adds argument-based benchmark selection to main() so individual
benchmarks can be run via: mvn exec:java -Dexec.args="jbang jbang-parse"